Add client user search for booking
